Fix spacing between button and text in overview

--- a/website/pages/consul-on-kubernetes/style.module.css
+++ b/website/pages/consul-on-kubernetes/style.module.css
@@ -6,5 +6,5 @@
 
 .leftSideText {
   composes: g-type-body from global;
-  margin-bottom: 54px;
+  margin-bottom: 46px;
 }
